--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-q7pKf5svzJ6MZP8a9vqj9HmnGkTWk7xFFzhEj8W7/FznhLmbZG2OtFzhKzvT8nEj"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="Style/styles.css" />
@@ -27,16 +27,17 @@
           class="card-body gap-1 rounded-3 text-center d-flex flex-column justify-content-center align-items-center"
         >
           <h5 class="card-title">Enter a city</h5>
-          <input id="city" type="text" class="rounded-2 border-0" />
-          <p class="card-text pt-2">Sunny, 38°C</p>
-          <a href="#" class="btn btn-primary">See Forecast</a>
+          <input id="city" type="text" class="rounded-2 border-0 city-input" />
+          <p class="card-text pt-2 output">Sunny, 38°C</p>
+          <a href="#" class="search-btn  btn btn-primary">See Forecast</a>
         </div>
       </div>
     </section>
 
+    <script src="main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-VVgCTgS3URq3Yk3AXv0OkQ9Zz3phbzzM3ZWS7Nv/c/cyY5qOwO+bMg2nY1BOo92j"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
   </body>
