--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
           <h5 class="card-title">Enter a city</h5>
           <input id="city" type="text" class="rounded-2 border-0 city-input" />
           <p class="card-text pt-2 output">Sunny, 38°C</p>
-          <a href="#" class="search-btn  btn btn-primary">See Forecast</a>
+          <a href="#" class="search-btn btn btn-primary border-0"
+            >See Forecast</a
+          >
         </div>
       </div>
     </section>
